--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,7 @@
       content="Web site for assets management"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is installed on a
